--- a/pug.stylus.babel/package.json
+++ b/pug.stylus.babel/package.json
@@ -12,7 +12,10 @@
     "babel-preset-env": "^1.2.1",
     "gulp": "^3.9.1",
     "gulp-webpack": "^1.5.0",
+    "minimist": "^1.2.0",
     "pixi.js": "^4.4.1",
+    "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2",
     "signals": "^1.0.0",
     "webpack": "^2.2.1",
     "webpack-manifest-plugin": "^1.1.0"
