--- a/pug.stylus.babel/package.json
+++ b/pug.stylus.babel/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/webpack",
+    "build:dev": "./node_modules/.bin/webpack",
+    "build:prod": "cross-env NODE_ENV=production ./node_modules/.bin/webpack -p",
     "dev-server": "node_modules/.bin/webpack-dev-server"
   },
   "devDependencies": {
@@ -13,6 +14,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
+    "cross-env": "^4.0.0",
     "html-webpack-plugin": "^2.28.0",
     "pug": "^2.0.0-beta.12",
     "pug-loader": "^2.3.0",
